--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,19 +1,25 @@
 {
     "name": "${localEnv:PROJECT_A_NAME:my_project_name}",
-    // "image": "python:3.10",
+    // Build configuration for the Docker image
     "build": {
+        // Dockerfile location
         "dockerfile": "Dockerfile",
+        // Arguments to pass during the build
         "args": {
             "ENV_NAME": "${localEnv:PROJECT_A_NAME:my_project_name}",
             "PYTHON_VER": "${localEnv:PYTHON_VER:3.10}",
             "QUARTO_VER": "${localEnv:QUARTO_VER:1.3.450}"
         }
     },
+    // Customizations for VSCode
     "customizations": {
         "settings": {
+            // Set the default Python interpreter
             "python.defaultInterpreterPath": "/opt/conda/envs/${localEnv:PROJECT_A_NAME:my_project_name}/bin/python3",
+            // Optionally select the interpreter
             "python.selectInterpreter": "/opt/conda/envs/${localEnv:PROJECT_A_NAME:my_project_name}/bin/python3"
         },
+        // Extensions to install in the VSCode environment
         "vscode": {
             "extensions": [
                 // Documentation Extensions
@@ -27,21 +33,32 @@
                 // Python Extensions
                 "ms-python.python",
                 "ms-toolsai.jupyter",
-                // Github Actions
+                // GitHub Actions
                 "github.vscode-github-actions"
             ]
         }
     },
-    // Optional, mount local volume:
-    // "mounts": [
-    //     "source=${localEnv:DATA_FOLDER},target=/home/csv,type=bind,consistency=cache"
-    // ],
+    // Mount local volumes
+    // Options:
+    //    Mount additional volumes by adding more entries to the list.
+    "mounts": [
+        "source=${localEnv:CSV_PATH},target=/home/csv,type=bind,consistency=cache"
+    ],
+    // Set environment variables for the remote container
+    // Options:
+    //    Add more environment variables if needed.
     "remoteEnv": {
         "MY_VAR": "${localEnv:MY_VAR:test_var}"
     },
+    // Additional arguments to pass to the container
+    // Options:
+    //    Adjust arguments or add new ones as required.
     "runArgs": [
         "--env-file",
         ".devcontainer/devcontainer.env"
     ],
-    "postCreateCommand": "python3 tests/test1.py"
+    // Command to run after the container is created
+    // Options:
+    //    Modify the command to run different scripts or commands post container creation.
+    "postCreateCommand": "python3 /workspaces/project_root/tests/test1.py"
 }
