--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
-version: '3.8'  # Specify the version of Docker Compose file format
+version: '3.8'
 
 services:
   datascience:
-    build: .  # Context for building the Docker image is the current directory
+    build: 
+      context: .  # Ensure the build context is the current directory
+      dockerfile: .devcontainer/Dockerfile  # Ensure the Dockerfile is specified correctly
     volumes:
-      - .:/workspace  # Mount the current directory to /workspace in the container
+      - .:/workspace
     ports:
-      - "8888:8888"  # Map port 8888 on the host to port 8888 in the container for Jupyter Notebook
-      - "6006:6006"  # Map port 6006 on the host to port 6006 in the container for TensorBoard
+      - "8888:8888"  # For Jupyter Notebook
+      - "6006:6006"  # For TensorBoard
     deploy:
       resources:
         reservations:
@@ -18,7 +20,4 @@ services:
     environment:
       - ENV_NAME=python_tutorial  # Set environment variables
       - PYTHON_VER=3.10
-    command: jupyter lab --ip 0.0.0.0 --port 8888 --no-browser --allow-root  # Override default command to start Jupyter Lab
-
-volumes:
-  data:  # Define a named volume (if needed for persistent storage, currently unused)
+    command: ["conda", "run", "-n", "data_science", "jupyter", "lab", "--ip", "0.0.0.0", "--port", "8888", "--no-browser", "--allow-root"]
