--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,64 +1,42 @@
 {
     "name": "${localEnv:PROJECT_A_NAME:my_project_name}",
-    // Build configuration for the Docker image
     "build": {
-        // Dockerfile location
-        "dockerfile": ".devcontainer/Dockerfile",
-        // Arguments to pass during the build
+        "dockerfile": "Dockerfile",
+        "context": "..",
         "args": {
             "ENV_NAME": "${localEnv:PROJECT_A_NAME:my_project_name}",
             "PYTHON_VER": "${localEnv:PYTHON_VER:3.10}",
             "QUARTO_VER": "${localEnv:QUARTO_VER:1.3.450}"
         }
     },
-    // Customizations for VSCode
     "customizations": {
-        "settings": {
-            // Set the default Python interpreter
-            "python.defaultInterpreterPath": "/opt/conda/envs/${localEnv:PROJECT_A_NAME:my_project_name}/bin/python3",
-            // Optionally select the interpreter
-            "python.selectInterpreter": "/opt/conda/envs/${localEnv:PROJECT_A_NAME:my_project_name}/bin/python3"
-        },
-        // Extensions to install in the VSCode environment
         "vscode": {
+            "settings": {
+                "python.defaultInterpreterPath": "/opt/conda/envs/data_science/bin/python",
+                "python.pythonPath": "/opt/conda/envs/data_science/bin/python"
+            },
             "extensions": [
-                // Documentation Extensions
                 "quarto.quarto",
                 "purocean.drawio-preview",
                 "redhat.vscode-yaml",
                 "yzhang.markdown-all-in-one",
-                // Docker Supporting Extensions
                 "ms-azuretools.vscode-docker",
                 "ms-vscode-remote.remote-containers",
-                // Python Extensions
                 "ms-python.python",
                 "ms-toolsai.jupyter",
-                // GitHub Actions
                 "github.vscode-github-actions"
             ]
         }
     },
-    // Mount local volumes
-    // Options:
-    //    Mount additional volumes by adding more entries to the list.
     "mounts": [
-        "source=${localEnv:CSV_PATH},target=/home/csv,type=bind,consistency=cache"
+        "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached"
     ],
-    // Set environment variables for the remote container
-    // Options:
-    //    Add more environment variables if needed.
     "remoteEnv": {
         "MY_VAR": "${localEnv:MY_VAR:test_var}"
     },
-    // Additional arguments to pass to the container
-    // Options:
-    //    Adjust arguments or add new ones as required.
     "runArgs": [
-        "--env-file",
-        ".devcontainer/devcontainer.env"
+        "--gpus", "all",
+        "--env-file", ".devcontainer/devcontainer.env"
     ],
-    // Command to run after the container is created
-    // Options:
-    //    Modify the command to run different scripts or commands post container creation.
-    "postCreateCommand": "python3 /workspaces/project_root/tests/test1.py"
+    "postCreateCommand": "bash -c 'eval \"$(/opt/conda/bin/conda shell.bash hook)\" && conda activate data_science && python /workspace/tests/test1.py'"
 }
