updating docker template with single conda activation

--- a/.devcontainer/devcontainer.env
+++ b/.devcontainer/devcontainer.env
@@ -1,6 +1,3 @@
-# Environment variables for the container
-# Options:
-#    Add more environment variables if needed.
-VAR1="var1"
-VAR2="var2"
-MY_VAR="some_var"
+ENV_NAME=data_science_example
+PYTHON_VER=3.10
+QUARTO_VER=1.3.450
