--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,12 +1,17 @@
 # Use NVIDIA CUDA base image for GPU support
 FROM nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04
 
+# Define ARGs
+ARG ENV_NAME=data_science_example
+ARG PYTHON_VER=3.10
+
 # Prevent tzdata from asking for user input
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Set environment variables
-ENV CONDA_DIR /opt/conda
-ENV PATH $CONDA_DIR/bin:$PATH
+ENV CONDA_DIR=/opt/conda
+ENV PATH=$CONDA_DIR/bin:$PATH
+ENV ENV_NAME=$ENV_NAME
 
 # Install system dependencies
 RUN apt-get update --fix-missing && apt-get install -y \
@@ -29,28 +34,23 @@ RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86
     && rm ~/miniconda.sh \
     && $CONDA_DIR/bin/conda clean -a -y
 
-# Initialize Conda for the shell
-RUN conda init bash
-
 # Create a new Conda environment
 COPY .devcontainer/environment.yml /tmp/environment.yml
-RUN conda env create -f /tmp/environment.yml \
+RUN sed -i "s/name: \${ENV_NAME}/name: $ENV_NAME/" /tmp/environment.yml && \
+    sed -i "s/- python=\${PYTHON_VER}/- python=$PYTHON_VER/" /tmp/environment.yml && \
+    conda env create -f /tmp/environment.yml \
     && conda clean -a -y
 
-# Activate the Conda environment in all future commands
-SHELL ["conda", "run", "-n", "data_science", "/bin/bash", "-c"]
+# Set up shell initialization for Conda
+RUN echo ". /opt/conda/etc/profile.d/conda.sh && conda activate $ENV_NAME" >> /etc/bash.bashrc
 
-# Ensure the Conda environment is activated by default in the container
-RUN echo "conda activate data_science" >> ~/.bashrc
-
-# Upgrade pip
-RUN pip install --upgrade pip
-
-# Install PyTorch and torchvision with CUDA support
-RUN pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
+# Upgrade pip and install additional packages within the Conda environment
+RUN /bin/bash -c ". /opt/conda/etc/profile.d/conda.sh && conda activate $ENV_NAME && \
+    pip install --upgrade pip && \
+    pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118"
 
 # Set working directory
 WORKDIR /workspace
 
 # Set the default command to bash
-CMD ["bash"]
+CMD ["/bin/bash"]
