--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,10 @@
 {
-    "name": "${localEnv:PROJECT_A_NAME:my_project_name}",
+    "name": "data_science_example",
     "build": {
         "dockerfile": "Dockerfile",
         "context": "..",
         "args": {
-            "ENV_NAME": "${localEnv:PROJECT_A_NAME:my_project_name}",
+            "ENV_NAME": "data_science_example",
             "PYTHON_VER": "${localEnv:PYTHON_VER:3.10}",
             "QUARTO_VER": "${localEnv:QUARTO_VER:1.3.450}"
         }
@@ -12,8 +12,15 @@
     "customizations": {
         "vscode": {
             "settings": {
-                "python.defaultInterpreterPath": "/opt/conda/envs/data_science/bin/python",
-                "python.pythonPath": "/opt/conda/envs/data_science/bin/python"
+                "python.defaultInterpreterPath": "/opt/conda/envs/data_science_example/bin/python",
+                "python.pythonPath": "/opt/conda/envs/data_science_example/bin/python",
+                "terminal.integrated.profiles.linux": {
+                    "bash": {
+                        "path": "bash",
+                        "args": ["-l"]
+                    }
+                },
+                "terminal.integrated.defaultProfile.linux": "bash"
             },
             "extensions": [
                 "quarto.quarto",
@@ -38,5 +45,5 @@
         "--gpus", "all",
         "--env-file", ".devcontainer/devcontainer.env"
     ],
-    "postCreateCommand": "bash -c 'eval \"$(/opt/conda/bin/conda shell.bash hook)\" && conda activate data_science && python /workspace/tests/test1.py'"
+    "postCreateCommand": "conda run -n data_science_example python /workspace/tests/test1.py"
 }
