--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '3.8'
-
 services:
   datascience:
-    build: 
+    build:
       context: .
       dockerfile: .devcontainer/Dockerfile
     volumes:
@@ -18,7 +16,6 @@ services:
               count: all
               capabilities: [gpu]
     environment:
-      - ENV_NAME=data_science
+      - ENV_NAME=data_science_example
       - PYTHON_VER=3.10
-    command: ["conda", "run", "-n", "data_science", "jupyter", "lab", "--ip", "0.0.0.0", "--port", "8888", "--no-browser", "--allow-root"]
-    
+    command: ["conda", "run", "-n", "data_science_example", "jupyter", "lab", "--ip", "0.0.0.0", "--port", "8888", "--no-browser", "--allow-root"]
