updated to have pretty_errors installed and tested

--- a/.devcontainer/environment.yml
+++ b/.devcontainer/environment.yml
@@ -16,8 +16,6 @@ dependencies:
   - flake8
   - mypy
   - pip
-  - seaborn  # For data visualization
-
-
-  #this environment.yml is only for streamlits and running locally, not for docker
-  
+  - seaborn
+  - pip:
+    - pretty_errors 
