adding in mystics 2025 interview notebook and paper

--- a/.devcontainer/environment.yml
+++ b/.devcontainer/environment.yml
@@ -17,9 +17,15 @@ dependencies:
   - mypy
   - pip
   - seaborn
+  - mysql-connector-python
+  - sqlalchemy
   - pip:
     - pretty_errors 
     - gdown
     - xgboost
     - CatBoost
     - lightgbm
+    - git+https://github.com/ghadfield32/ml_preprocessor
+    - shap
+    - scikit-optimize
+    - shapash
