--- a/.devcontainer/environment.yml
+++ b/.devcontainer/environment.yml
@@ -1,32 +1,2 @@
-name: data_science_example
-channels:
-  - conda-forge
-  - defaults
-dependencies:
-  - python=3.10
-  - numpy
-  - pandas
-  - scikit-learn
-  - matplotlib
-  - seaborn
-  - jupyter
-  - ipykernel
-  - pytest
-  - black
-  - flake8
-  - mypy
-  - pip
-  - seaborn
-  - mysql-connector-python
-  - sqlalchemy
-  - pip:
-    - pretty_errors 
-    - gdown
-    - xgboost
-    - CatBoost
-    - lightgbm
-    - git+https://github.com/ghadfield32/ml_preprocessor
-    - shap
-    - scikit-optimize
-    - shapash
-    - bayesian-optimization
+# This file has been removed as part of the migration from Conda to uv.
+# Dependencies are now managed via pyproject.toml and uv.lock
