--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,11 @@ mlflow_db/
 mlruns_local/
 
 node_modules/
+frontend/node_modules/
 
 archive/
 .venv
-uv.lock
+/uv.lock  # Only ignore uv.lock in root directory
 
 test_iris.json
 .env.template
