--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,7 @@ publish = "dist"
 
 [build.environment]
 NODE_VERSION = "18.20.0"
+VITE_API_URL = "https://docker-dev-template.onrender.com/api/v1"
 
 [[redirects]]
   from = "/*"
