--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,37 @@
 [build]
-base = "frontend"
-command = "npm run build"
-publish = "dist"
+  base = "frontend"
+  command = "npm ci && npm run build"
+  publish = "dist"
 
+# Environment variables for production
 [build.environment]
-NODE_VERSION = "18.20.0"
+  NODE_VERSION = "18"
+  NPM_VERSION = "9"
 
+# Redirect all routes to index.html for SPA routing
 [[redirects]]
   from = "/*"
   to = "/index.html"
-  status = 200 
+  status = 200
+
+# Headers for security and performance
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+
+# Cache static assets
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+# Cache service worker
+[[headers]]
+  for = "/sw.js"
+  [headers.values]
+    Cache-Control = "no-cache" 
+
